--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,33 +22,43 @@ a {
 }
 
 /* Styles for the game panel */
+main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .panel {
-  width: 50vw;
-  margin: 10vh auto 0;
-  padding: 25px;
-  background-color: #DDA448;
+  width: 60vw;
+  height: 60vh;
+  padding: 0 25px;
+  background-color: #dda448ef;
   border-radius: 25px;
-  text-align: center;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.panel > h1 {
-  width: 80%;
-  margin: 0 auto;
-  font-weight: 900;
+.title-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  text-align: center;
+}
+
+.title-bar > h1 {
+  width: 60%;
   border-bottom: black solid 1px;
+  font-weight: 900;
   font-size: 4rem;
 }
 
-.panel > p {
-  width: 80%;
-  margin: 0 auto;
-  padding: 10px;
-  font-size: 2rem;
-  font-weight: 700;
+#game-area > h2 {
+  font-size: 2.5rem;
+  text-align: center;
 }
 
 /* Button styles accross game */
@@ -74,19 +84,16 @@ a {
   width: 40%;
   margin: 25px auto;
   padding: 25px;
+  width: 40%;
+  font-size: 3rem;
 }
 
-#home-button {
-  position: absolute;
+#home-button, #sound-icon  {
   display: inline-block;
-  top: 10%;
+  color: #ffffff;
   cursor: pointer;
   transition: all 0.3s ease;
   font-size: 6rem;
-}
-
-#home-button:hover {
-  color: #D6D6D6;
 }
 
 /* Social media links */
@@ -104,11 +111,11 @@ a {
 }
 
 .social-media > li {
-  padding: 20px;
+  padding: 25px;
   display: inline-block;
 }
 
-.social-media i:hover {
+.social-media i:hover, #home-button:hover, #sound-icon:hover {
   color: #D6D6D6;
 }
 
@@ -116,7 +123,7 @@ a {
 
 .line {
   display: block;
-  width: 80%;
-  margin: 25px auto;
+  width: 60%;
+  margin: 0 auto;
   border-bottom: 1px solid black;
 }
