--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,11 @@ a {
   color: white;
 }
 
-/* Styles for the game panel */
+i {
+  color: #ffffff;
+}
+
+/* Styles for the game panel and title bar */
 main {
   width: 100vw;
   height: 100vh;
@@ -56,9 +60,41 @@ main {
   font-size: 4rem;
 }
 
+/* Game area of panel */
+
+#game-area {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #game-area > h2 {
   font-size: 2.5rem;
   text-align: center;
+}
+
+/* Enter username page styles  */
+#username-div {
+  width: 40%;
+  overflow: hidden;
+}
+
+#username-div > label {
+  display: block;
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+#username {
+  display: block;
+  width: 100%;
+  margin: 12.5px auto;
+  padding: 20px;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 /* Button styles accross game */
@@ -79,6 +115,10 @@ main {
   background-color: #404D64;
 }
 
+.menu-btn-container {
+  width: 100%;
+}
+
 .menu-btn {
   display: block;
   width: 40%;
@@ -94,6 +134,17 @@ main {
   cursor: pointer;
   transition: all 0.3s ease;
   font-size: 6rem;
+}
+
+#submit {
+  display: block;
+  width: 100%;
+  padding: 12.5px;
+  font-size: 3rem;
+}
+
+#submit > i {
+  font-size: 2rem;
 }
 
 /* Social media links */
