--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,6 @@ a {
   color: white;
 }
 
-i {
-  color: #ffffff;
-}
-
 /* Styles for the game panel and title bar */
 main {
   width: 100vw;
@@ -60,6 +56,13 @@ main {
   font-size: 4rem;
 }
 
+.line {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  border-bottom: 1px solid black;
+}
+
 /* Game area of panel */
 
 #game-area {
@@ -84,7 +87,7 @@ main {
 
 #username-div > label {
   display: block;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 900;
 }
 
@@ -92,9 +95,65 @@ main {
   display: block;
   width: 100%;
   margin: 12.5px auto;
-  padding: 20px;
+  padding: 20px 0px 20px 20px;
   font-size: 1.5rem;
   font-weight: 700;
+}
+
+
+/* Select difficulty page */
+.username-container {
+  width: 60%;
+  text-align: center;
+}
+
+.username-container > h2 {
+  font-size: 2.5rem;
+  font-weight: 900;
+}
+
+#clear-username {
+  display: block;
+  cursor: pointer;
+  font-size: 2rem;
+  font-weight: 700;
+  transition: all 0.3s ease;
+}
+
+.diff-container {
+  display: flex;
+  width: 60%;
+  margin: 0 auto;
+  padding: 25px;
+  justify-content: space-between;
+}
+
+.diff-container input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.diff-container label {
+  display: inline-block;
+  width: 25%;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 3rem;
+  transition: all ease 0.3s;
+}
+
+.diff-container input[type="radio"]:checked + label {
+  background-color: #0A2463;
+}
+
+#normalDifficulty, #hardDifficulty {
+  display: none;
+}
+
+.lockIcon {
+  display: none;
 }
 
 /* Button styles accross game */
@@ -143,12 +202,17 @@ main {
   font-size: 3rem;
 }
 
-#submit > i {
+#play-btn {
+  width: 60%;
+  padding: 12.5px;
+  font-size: 3rem;
+}
+
+#submit > i, #play-btn > i {
   font-size: 2rem;
 }
 
 /* Social media links */
-
 .social-media {
   width: 80%;
   margin: 0 auto;
@@ -166,15 +230,14 @@ main {
   display: inline-block;
 }
 
-.social-media i:hover, #home-button:hover, #sound-icon:hover {
+/* Default hover colour */
+.social-media i:hover, #home-button:hover, 
+#sound-icon:hover, #clear-username:hover {
   color: #D6D6D6;
 }
 
 /* General classes */
 
-.line {
-  display: block;
-  width: 60%;
-  margin: 0 auto;
-  border-bottom: 1px solid black;
+.bold {
+  font-weight: 900;
 }
