--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,12 +80,12 @@ main {
 }
 
 /* Enter username page styles  */
-#username-div {
+#username-form {
   width: 40%;
   overflow: hidden;
 }
 
-#username-div > label {
+#username-form > label {
   display: block;
   font-size: 2.5rem;
   font-weight: 900;
