--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,8 +168,8 @@ main {
   font-weight: 900;
 }
 
-#game-area > p > span {
-  font-size: 2rem;
+#game-area span {
+  font-size: 2.5rem;
 }
 
 .answer-btn {
