--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,8 +227,19 @@ main {
   to {top: 30%; opacity: 1}
 }
 
-/* Button styles accross game */
+/* Rules page */
+.rules-div {
+  width: 60%;
+  text-align: center;
+}
 
+.rules-div > p {
+  font-size: 2.5rem;
+  padding: 12.5px;
+  font-weight: 700;
+}
+
+/* Button styles accross game */
 .btn {
   background-color: #4B5842;
   color: white;
