Fix stylings on end of quiz modal to include appropriate button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,10 @@ main {
   font-size: 2rem;
 }
 
+#reset-quiz {
+  cursor: pointer;
+}
+
 /* Social media links */
 .social-media {
   width: 80%;
