--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ main {
 
 .panel {
   width: 60vw;
+  min-height: 600px;
   padding: 0 25px;
   background-color: #dda448ef;
   border-radius: 25px;
@@ -73,6 +74,7 @@ main {
 #game-area {
   width: 100%;
   height: 70%;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -92,6 +94,8 @@ main {
 
 
 /* Enter username page styles  */
+
+
 #username-form {
   width: 40%;
   overflow: hidden;
@@ -367,7 +371,6 @@ i:hover, #clear-username:hover {
     width: 70vw;
     margin: 10% auto;
     padding: 25px 0;
-    display: block;
   }
 
   .title-bar {
@@ -408,7 +411,11 @@ i:hover, #clear-username:hover {
     font-size: 7rem;
   }
 
-  /* Setup game page */
+  /* username form */
+
+  #username-form {
+    width: 60%;
+  }
 
 }
 
@@ -472,6 +479,11 @@ i:hover, #clear-username:hover {
 
   .social-media > li {
     padding: 25px 10px;
+  }
+
+  /* Username input */
+  #username-form {
+    width: 70%;
   }
 }
 
