--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600;700;800;900&display=swap');
 
+
 /* Global styles */
 * {
   padding: 0;
@@ -8,70 +9,70 @@
   font-family: Inconsolata, sans-serif;
   /* Sets default font-size to 10px */
   font-size: 62.5%;
-}
-
-html {
+ }
+  
+ html {
   background: url('../images/map.jpg') center center no-repeat;
   background-size: cover;
   min-height: 100vh;
-}
-
-a {
+ }
+  
+ a {
   text-decoration: none;
-}
-
-
-/* Styles for the game panel and title bar */
-main {
+ }
+  
+  
+ /* Styles for the game panel and title bar */
+ main {
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.panel {
+ }
+  
+ .panel {
   width: 60vw;
   min-height: 600px;
   padding: 0 25px;
   background-color: #dda448ef;
   border-radius: 25px;
-
+  
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.title-bar {
+ }
+  
+ .title-bar {
   display: flex;
   justify-content: start;
   align-items: flex-end;
   text-align: center;
-}
-
-.title-bar > h1 {
+ }
+  
+ .title-bar > h1 {
   width: 60%;
   border-bottom: black solid 1px;
   font-weight: 900;
   font-size: 4rem;
-}
-
-#icon-div {
+ }
+  
+ #icon-div {
   width: 20%;
   text-align: start;
-}
-
-.line {
+ }
+  
+ .line {
   display: block;
   width: 60%;
   margin: 0 auto;
   border-bottom: 1px solid black;
-}
-
-
-/* Game area of panel */
-
-#game-area {
+ }
+  
+  
+ /* Game area of panel */
+  
+ #game-area {
   width: 100%;
   height: 70%;
   flex-grow: 1;
@@ -79,78 +80,78 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-#game-area > h2 {
+  }
+  
+ #game-area > h2 {
   width: 60%;
   font-size: 2.5rem;
   text-align: center;
-}
-
-.menu-btn-container {
+ }
+  
+ .menu-btn-container {
   width: 100%;
   flex-grow: 1;
-}
-
-
-/* Enter username page styles  */
-
-
-#username-form {
+ }
+  
+  
+ /* Enter username page styles  */
+  
+  
+ #username-form {
   width: 40%;
   overflow: hidden;
-}
-
-#username-form > label {
+ }
+  
+ #username-form > label {
   display: block;
   font-size: 2.5rem;
   font-weight: 900;
-}
-
-#username {
+ }
+  
+ #username {
   display: block;
   width: 100%;
   margin: 12.5px auto;
   padding: 20px 0px 20px 20px;
   font-size: 1.5rem;
   font-weight: 700;
-}
-
-
-/* Select difficulty page */
-.username-container {
+ }
+  
+  
+ /* Select difficulty page */
+ .username-container {
   width: 60%;
   text-align: center;
-}
-
-.username-container > h2 {
+ }
+  
+ .username-container > h2 {
   font-size: 2.5rem;
   font-weight: 900;
-}
-
-#clear-username {
+ }
+  
+ #clear-username {
   display: block;
   cursor: pointer;
   font-size: 2rem;
   font-weight: 700;
   transition: all 0.3s ease;
-}
-
-.diff-container {
+ }
+  
+ .diff-container {
   display: flex;
   width: 60%;
   margin: 0 auto;
   padding: 25px;
   justify-content: space-between;
-}
-
-.diff-container input[type="radio"] {
+ }
+  
+ .diff-container input[type="radio"] {
   opacity: 0;
   position: fixed;
   width: 0;
-}
-
-.diff-container label {
+ }
+  
+ .diff-container label {
   display: inline-block;
   width: 25%;
   padding: 20px;
@@ -158,51 +159,52 @@ main {
   text-align: center;
   font-size: 3rem;
   transition: all ease 0.3s;
-}
-
-.diff-container input[type="radio"]:checked + label {
+ }
+  
+ .diff-container input[type="radio"]:checked + label {
   background-color: #0A2463;
-}
-
-#normalDifficulty, #hardDifficulty {
+ }
+  
+ #normalDifficulty, #hardDifficulty {
   display: none;
-}
-
-.lockIcon {
+ }
+  
+ .lockIcon {
   display: none;
-}
-
-.lockIcon > i {
+ }
+  
+ .lockIcon > i {
   font-size: 3rem;
-}
-
-/* Run game area */
-
-.answer-container {
+ }
+  
+ /* Run game area */
+  
+ .answer-container {
   width: 60%;
-}
-
-#game-area > p { 
+ }
+  
+ #game-area > p, #game-area > h3 {
+  width: 75%;
   font-size: 2.5rem;
-  font-weight: 900;
-}
-
-#game-area span {
+  text-align: center;
+ }
+  
+ #game-area span {
   font-size: 2.5rem;
-}
-
-.answer-btn {
+ }
+  
+ .answer-btn {
   display: block;
   width: 80%;
   margin: 10px auto;
   padding: 10px;
   font-size: 3rem;
   transition: all 0.3s ease;
-}
-
-/* Modal styles */
-
-#modal {
+ }
+  
+ /* Modal styles */
+  
+ #modal {
   display: none;
   width: 30%;
   border-radius: 15px;
@@ -215,52 +217,52 @@ main {
   color: white;
   font-weight: 2rem;
   text-align: center;
-
+  
   animation: animationTop;
   animation-duration: 0.4s;
-}
-
-#modalContent {
+ }
+  
+ #modalContent {
   margin: 0 auto;
   font-weight: 2rem;
   padding-bottom: 12.5px;
   text-align: center;
   color: black;
-}
-
-#modal h3 {
+ }
+  
+ #modal h3 {
   font-size: 4rem;
   font-weight: 900;
   padding: 12.5px;
   color: white;
   background-color: #27213C;
-}
-
-#modalContent > p {
+ }
+  
+ #modalContent > p {
   font-size: 2.5rem;
   font-weight: 700;
   padding: 12.5px;
-}
-
-@keyframes animationTop {
+ }
+  
+ @keyframes animationTop {
   from {top: -100px; opacity: 0}
   to {top: 30%; opacity: 1}
-}
-
-/* Rules page */
-.rules-div {
+ }
+  
+ /* Rules page */
+ .rules-div {
   width: 60%;
   text-align: center;
-}
-
-.rules-div > p {
+ }
+  
+ .rules-div > p {
   font-size: 2.5rem;
   padding: 12.5px;
   font-weight: 700;
-}
-
-/* Button styles accross game */
-.btn {
+ }
+  
+ /* Button styles accross game */
+ .btn {
   background-color: #4B5842;
   color: white;
   border-radius: 10px;
@@ -269,295 +271,316 @@ main {
   cursor: pointer;
   transition: all 0.3s ease;
   padding: 12.5px;
-}
-
-.btn:hover {
+ }
+  
+ .btn:hover {
   background-color: #404D64;
-}
-
-.answer-btn:hover {
+ }
+  
+ .answer-btn:hover {
   background-color: #404D64;
-}
-
-.menu-btn {
+ }
+  
+ .menu-btn {
   display: block;
   width: 40%;
   margin: 25px auto;
   padding: 25px;
   width: 40%;
   font-size: 3rem;
-}
-
-#home-button, #sound-icon  {
+ }
+  
+ #home-button, #sound-icon  {
   display: inline-block;
   color: black;
   margin-right: 5%;
   cursor: pointer;
   transition: all 0.3s ease;
   font-size: 6rem;
-}
-
-#home-button > i, #sound-icon > i {
+ }
+  
+ #home-button > i, #sound-icon > i {
   transition: all 0.3s ease;
-}
-
-#submit {
+ }
+  
+ #submit {
   display: block;
   width: 100%;
   padding: 12.5px;
   font-size: 3rem;
-}
-
-#play-btn {
+ }
+  
+ #play-btn {
   width: 60%;
   padding: 12.5px;
   font-size: 3rem;
-}
-
-#submit > i, #play-btn > i {
+ }
+  
+ #submit > i, #play-btn > i {
   font-size: 2rem;
-}
-
-#reset-quiz {
+ }
+  
+ #reset-quiz {
   cursor: pointer;
-}
-
-/* Social media links */
-.social-media {
+ }
+  
+ /* Social media links */
+ .social-media {
   width: 80%;
   margin: 0 auto;
   text-align: center;
   list-style-type: none;
-}
-
-.social-media i {
+ }
+  
+ .social-media i {
   font-size: 4rem;
   color: black;
   transition: all ease 0.3s;
-}
-
-.social-media > li {
+ }
+  
+ .social-media > li {
   padding: 25px;
   display: inline-block;
-}
-
-/* Default hover colour */
-i:hover, #clear-username:hover {
+ }
+  
+ /* Default hover colour */
+ i:hover, #clear-username:hover {
   color: #666666;
-}
-
-/* General classes */
-
-.bold {
+ }
+  
+ /* General classes */
+  
+ .bold {
   font-weight: 900;
-}
-
-/* Media queries for responsive design */
-
-/* laptops and smallers screens */
-@media screen and (max-width: 1500px) {
-
+ }
+  
+ /* Media queries for responsive design */
+  
+ /* laptops and smallers screens */
+ @media screen and (max-width: 1500px) {
+  
   .panel {
     width: 75vw;
     margin: 5% auto;
   }
-}
-
-/* Tablets */
-@media screen and (max-width: 1201px) {
-
+ }
+  
+ /* Tablets */
+ @media screen and (max-width: 1201px) {
+  
   /* Main menu */
   .panel {
     width: 70vw;
     margin: 10% auto;
     padding: 25px 0;
   }
-
+  
   .title-bar {
     flex-wrap: wrap;
   }
-
+  
   .title-bar > h1 {
     padding-top: 12.5px;
     width: 80%;
     margin: 0 auto;
   }
-
+  
   #icon-div {
     width: 80%;
     margin: 0 auto;
   }
-
+  
   #game-area > h2 {
     width: 80%;
     font-size: 3rem;
   }
-
+  
   .menu-btn-container {
     justify-content: center;
   }
-
+  
   .menu-btn {
     width: 60%;
-    padding: 40px;
   }
-
+  
   .line {
     width: 80%;
     margin: 25px auto;
   }
-
+  
   .social-media > i {
     font-size: 7rem;
   }
-
+  
   /* username form */
   #username-form {
     width: 60%;
   }
-
+  
   /* Difficulty selection */
   .diff-container, .username-container, #play-btn {
     width: 80%;
   }
-
+  
   label.btn {
     font-size: 2.5rem;
   }
-
-}
-
-/* Smaller Tablets */
-@media screen and (max-width: 950px) {
-
+  
+  /* Run game area */
+  #game-area > p, #game-area > h3 {
+    width: 85%;
+  }
+ }
+  
+ /* Smaller Tablets */
+ @media screen and (max-width: 950px) {
+  
   /* Main menu */
   .panel {
     width: 80vw;
     padding:25px;
   }
-
+  
   .title-bar > h1 {
     width: 80%;
     font-size: 3.5rem;
   }
-
+  
   .line {
     width: 80%;
     margin: 0 auto;
   }
-  
-  /* Difficulty selection */
+   /* Difficulty selection */
   label.btn {
     padding: 15px;
   }
-
-}
-
-/* Tiny Tablets */
-@media screen and (max-width: 710px) {
-
+  
+ }
+  
+ /* Tiny Tablets */
+ @media screen and (max-width: 710px) {
+  
   /* Main menu */
   .panel {
     width: 80vw;
   }
-
+  
   #game-area > h2 {
     font-size: 2.5rem;
   }
-
+  
   .title-bar > h1, #icon-div, .line {
     width: 90%;
   }
-
+  
   /* Difficulty selection */
   label.btn {
     padding: 15px 30px;
     font-size: 2rem;
     width: 15%;
   }
-
+  
   .diff-container, .username-container, #play-btn {
     width: 80%;
   }
-}
-
-/* Large mobile Devices */
-@media screen and (max-width: 580px) {
+  
+  /* Run game area */
+  .answer-container {
+    width: 80%;
+  }
+  
+  .answer-btn {
+    width: 100%;
+  }
+  
+  #game-area > p, #game-area > h3 {
+    font-size: 2rem;
+  }
+  
+ }
+  
+ /* Large mobile Devices */
+ @media screen and (max-width: 580px) {
   /* Main menu */
   .panel {
     width: 90vw;
     padding: 0;
   }
-
+  
+  .title-bar > h1 {
+    font-size: 3rem;
+  }
+  
   #game-area > h2 {
     font-size: 2rem;
   }
-
-  .title-bar > h1, #icon-div, .line {
-    width: 70%;
-  }
-
+  
   .menu-btn {
     padding: 20px;
   }
-
+  
   .social-media > li {
     padding: 25px 10px;
   }
-
+  
   /* Username input */
   #username-form {
     width: 70%;
   }
-
+  
   /* Difficulty selection */
   .username-container > h2 {
     font-size: 2rem;
   }
-
+  
   .diff-container i {
     font-size: 2rem;
   }
-
+  
   label.btn {
     padding: 15px 30px;
     font-size: 2rem;
     width: 15%;
   }
-
+  
   .diff-container, .username-container, #play-btn {
     width: 80%;
   }
-}
-
-/* Mobile Devices */
-@media screen and (max-width: 500px) {
   
-  /* Main menu */
+  /* Run game area */
+  #game-area > h3 {
+    margin-bottom: 12.5px;
+  }
+  
+ }
+  
+ /* Mobile Devices */
+ @media screen and (max-width: 500px) {
+   /* Main menu */
   .panel {
     width: 90vw;
     padding: 0;
   }
-
+  
   .title-bar > h1 {
     width: 80%;
     font-size: 2.2rem;
   }
-
+  
   /* Difficulty selection */
   .username-container > h2 {
     font-size: 2rem;
   }
-
+  
   .diff-container {
     flex-direction: column;
     padding: 12.5px;
   }
-
+  
   #clear-username, .diff-container i {
     font-size: 2rem;
   }
-
+  
   label.btn {
     display: block;
     padding: 12.5px;
@@ -565,11 +588,11 @@ i:hover, #clear-username:hover {
     font-size: 2rem;
     width: 80%;
   }
-
+  
   .diff-container, .username-container, #play-btn {
     width: 80%;
   }
-
+  
   #play-btn {
     width: 35%;
     padding: 12.5px;
@@ -578,24 +601,30 @@ i:hover, #clear-username:hover {
     align-self: start;
     margin-left: 15%;
   }
-}
-
-/* small Mobile Devices */
-@media screen and (max-width: 400px) {
   
-  /* Main menu */
+  /* Run game area */
+  .answer-btn {
+    width: 100%;
+  }
+  
+  #game-area > p, #game-area > h3 {
+    font-size: 2rem;
+  }
+ }
+  
+ /* small Mobile Devices */
+ @media screen and (max-width: 400px) {
+   /* Main menu */
   .panel {
     width: 90vw;
     padding: 0;
   }
-
+  
   /* .title-bar > h1 {
     width: 90%;
   } */
-  
-  #icon-div i, .social-media i {
+   #icon-div i, .social-media i {
     font-size: 3rem;
   }
-}
-
-
+ }
+ 
