--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@ main {
 }
 
 #game-area>h2 {
+  width: 60%;
   font-size: 2.5rem;
   text-align: center;
 }
@@ -715,13 +716,13 @@ i:hover,
 
 }
 
-/* small Mobile Devices */
+/* Small Mobile Devices */
 @media screen and (max-width: 400px) {
 
   /* Main menu */
   .panel {
     width: 95vw;
-    min-height: 400px;
+    height: 90vh;
     padding: 0;
   }
 
@@ -740,6 +741,10 @@ i:hover,
   }
 
   /* Enter username */
+  #username {
+    font-size: 1.5rem;
+  }
+
   #submit {
     font-size: 2.5rem;
   }
